--- a/main.html
+++ b/main.html
@@ -59,8 +59,15 @@
 				</ul>
 			</div>
 			<div class="description">
-				
+				<h5>BENEFITS</h5>
+				<ul>
+					<li>Apples are nutricious</li>
+					<li>Apples may be good for weight loss</li>
+					<li>Apples may be good for bone health</li>
+					<li>They're linked to the lowest risk of diabetes</li>
+				</ul>
 			</div>
+			<button type="button" id="cart">ADD TO CART</button>
 		</div>
 	</section>
 </body>
